--- a/apps/snmpnetstat/Makefile.depend
+++ b/apps/snmpnetstat/Makefile.depend
@@ -21,11 +21,15 @@
 ./if.lo: ../../include/net-snmp/library/snmp_transport.h
 ./if.lo: ../../include/net-snmp/library/snmp_service.h
 ./if.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
-./if.lo: ../../include/net-snmp/library/snmpUDPDomain.h
+./if.lo: ../../include/net-snmp/library/snmpUnixDomain.h
+./if.lo:  ../../include/net-snmp/library/snmpUDPDomain.h
 ./if.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./if.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./if.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./if.lo: ../../include/net-snmp/library/snmpTCPDomain.h
+./if.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./if.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./if.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./if.lo: ../../include/net-snmp/library/ucd_compat.h
 ./if.lo: ../../include/net-snmp/library/mib.h
 ./if.lo: ../../include/net-snmp/mib_api.h
@@ -88,11 +92,15 @@
 ./inet6.lo: ../../include/net-snmp/library/snmp_transport.h
 ./inet6.lo: ../../include/net-snmp/library/snmp_service.h
 ./inet6.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
+./inet6.lo: ../../include/net-snmp/library/snmpUnixDomain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpUDPDomain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpTCPDomain.h
+./inet6.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./inet6.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./inet6.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./inet6.lo: ../../include/net-snmp/library/ucd_compat.h
 ./inet6.lo: ../../include/net-snmp/library/mib.h
 ./inet6.lo: ../../include/net-snmp/mib_api.h
@@ -154,11 +162,15 @@
 ./inet.lo: ../../include/net-snmp/library/snmp_transport.h
 ./inet.lo: ../../include/net-snmp/library/snmp_service.h
 ./inet.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
+./inet.lo: ../../include/net-snmp/library/snmpUnixDomain.h
 ./inet.lo: ../../include/net-snmp/library/snmpUDPDomain.h
 ./inet.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./inet.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./inet.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./inet.lo: ../../include/net-snmp/library/snmpTCPDomain.h
+./inet.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./inet.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./inet.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./inet.lo: ../../include/net-snmp/library/ucd_compat.h
 ./inet.lo: ../../include/net-snmp/library/mib.h
 ./inet.lo: ../../include/net-snmp/mib_api.h
@@ -220,11 +232,15 @@
 ./main.lo: ../../include/net-snmp/library/snmp_transport.h
 ./main.lo: ../../include/net-snmp/library/snmp_service.h
 ./main.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
+./main.lo: ../../include/net-snmp/library/snmpUnixDomain.h
 ./main.lo: ../../include/net-snmp/library/snmpUDPDomain.h
 ./main.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./main.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./main.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./main.lo: ../../include/net-snmp/library/snmpTCPDomain.h
+./main.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./main.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./main.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./main.lo: ../../include/net-snmp/library/ucd_compat.h
 ./main.lo: ../../include/net-snmp/library/mib.h
 ./main.lo: ../../include/net-snmp/mib_api.h
@@ -286,11 +302,15 @@
 ./route.lo: ../../include/net-snmp/library/snmp_transport.h
 ./route.lo: ../../include/net-snmp/library/snmp_service.h
 ./route.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
+./route.lo: ../../include/net-snmp/library/snmpUnixDomain.h
 ./route.lo: ../../include/net-snmp/library/snmpUDPDomain.h
 ./route.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./route.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./route.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./route.lo: ../../include/net-snmp/library/snmpTCPDomain.h
+./route.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./route.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./route.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./route.lo: ../../include/net-snmp/library/ucd_compat.h
 ./route.lo: ../../include/net-snmp/library/mib.h
 ./route.lo: ../../include/net-snmp/mib_api.h
@@ -352,11 +372,15 @@
 ./winstub.lo: ../../include/net-snmp/library/snmp_transport.h
 ./winstub.lo: ../../include/net-snmp/library/snmp_service.h
 ./winstub.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
+./winstub.lo: ../../include/net-snmp/library/snmpUnixDomain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpUDPDomain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpTCPDomain.h
+./winstub.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./winstub.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./winstub.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./winstub.lo: ../../include/net-snmp/library/ucd_compat.h
 ./winstub.lo: ../../include/net-snmp/library/mib.h
 ./winstub.lo: ../../include/net-snmp/mib_api.h
