--- a/apps/snmpnetstat/Makefile.depend
+++ b/apps/snmpnetstat/Makefile.depend
@@ -1,9 +1,7 @@
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
 ./if.lo: ../../include/net-snmp/net-snmp-config.h
-./if.lo: ../../include/net-snmp/system/linux.h
-./if.lo: ../../include/net-snmp/system/sysv.h
-./if.lo: ../../include/net-snmp/system/generic.h
+./if.lo: ../../include/net-snmp/machine/generic.h
 ./if.lo: ../../include/net-snmp/net-snmp-includes.h 
 ./if.lo: ../../include/net-snmp/definitions.h ../../include/net-snmp/types.h
 ./if.lo:  ../../include/net-snmp/library/oid.h
@@ -21,15 +19,13 @@
 ./if.lo: ../../include/net-snmp/library/snmp_transport.h
 ./if.lo: ../../include/net-snmp/library/snmp_service.h
 ./if.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
-./if.lo: ../../include/net-snmp/library/snmpUnixDomain.h
-./if.lo:  ../../include/net-snmp/library/snmpUDPDomain.h
+./if.lo: ../../include/net-snmp/library/snmpUDPDomain.h
 ./if.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./if.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./if.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./if.lo: ../../include/net-snmp/library/snmpTCPDomain.h
-./if.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./if.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./if.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
-./if.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./if.lo: ../../include/net-snmp/library/ucd_compat.h
 ./if.lo: ../../include/net-snmp/library/mib.h
 ./if.lo: ../../include/net-snmp/mib_api.h
@@ -72,7 +68,8 @@
 ./if.lo: ../../include/net-snmp/library/snmpv3-security-includes.h
 ./if.lo: ../../include/net-snmp/library/snmptsm.h
 ./if.lo: ../../include/net-snmp/library/snmpusm.h 
-./if.lo:  main.h netstat.h
+./if.lo:   main.h
+./if.lo: netstat.h
 ./inet6.lo: ../../include/net-snmp/net-snmp-config.h
 ./inet6.lo: ../../include/net-snmp/net-snmp-includes.h 
 ./inet6.lo: ../../include/net-snmp/definitions.h
@@ -92,15 +89,13 @@
 ./inet6.lo: ../../include/net-snmp/library/snmp_transport.h
 ./inet6.lo: ../../include/net-snmp/library/snmp_service.h
 ./inet6.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
-./inet6.lo: ../../include/net-snmp/library/snmpUnixDomain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpUDPDomain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpTCPDomain.h
-./inet6.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./inet6.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./inet6.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
-./inet6.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./inet6.lo: ../../include/net-snmp/library/ucd_compat.h
 ./inet6.lo: ../../include/net-snmp/library/mib.h
 ./inet6.lo: ../../include/net-snmp/mib_api.h
@@ -162,15 +157,13 @@
 ./inet.lo: ../../include/net-snmp/library/snmp_transport.h
 ./inet.lo: ../../include/net-snmp/library/snmp_service.h
 ./inet.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
-./inet.lo: ../../include/net-snmp/library/snmpUnixDomain.h
 ./inet.lo: ../../include/net-snmp/library/snmpUDPDomain.h
 ./inet.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./inet.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./inet.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./inet.lo: ../../include/net-snmp/library/snmpTCPDomain.h
-./inet.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./inet.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./inet.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
-./inet.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./inet.lo: ../../include/net-snmp/library/ucd_compat.h
 ./inet.lo: ../../include/net-snmp/library/mib.h
 ./inet.lo: ../../include/net-snmp/mib_api.h
@@ -232,15 +225,13 @@
 ./main.lo: ../../include/net-snmp/library/snmp_transport.h
 ./main.lo: ../../include/net-snmp/library/snmp_service.h
 ./main.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
-./main.lo: ../../include/net-snmp/library/snmpUnixDomain.h
 ./main.lo: ../../include/net-snmp/library/snmpUDPDomain.h
 ./main.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./main.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./main.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./main.lo: ../../include/net-snmp/library/snmpTCPDomain.h
-./main.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./main.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./main.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
-./main.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./main.lo: ../../include/net-snmp/library/ucd_compat.h
 ./main.lo: ../../include/net-snmp/library/mib.h
 ./main.lo: ../../include/net-snmp/mib_api.h
@@ -302,15 +293,13 @@
 ./route.lo: ../../include/net-snmp/library/snmp_transport.h
 ./route.lo: ../../include/net-snmp/library/snmp_service.h
 ./route.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
-./route.lo: ../../include/net-snmp/library/snmpUnixDomain.h
 ./route.lo: ../../include/net-snmp/library/snmpUDPDomain.h
 ./route.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./route.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./route.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./route.lo: ../../include/net-snmp/library/snmpTCPDomain.h
-./route.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./route.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./route.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
-./route.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./route.lo: ../../include/net-snmp/library/ucd_compat.h
 ./route.lo: ../../include/net-snmp/library/mib.h
 ./route.lo: ../../include/net-snmp/mib_api.h
@@ -372,15 +361,13 @@
 ./winstub.lo: ../../include/net-snmp/library/snmp_transport.h
 ./winstub.lo: ../../include/net-snmp/library/snmp_service.h
 ./winstub.lo: ../../include/net-snmp/library/snmpCallbackDomain.h
-./winstub.lo: ../../include/net-snmp/library/snmpUnixDomain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpUDPDomain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpUDPIPv4BaseDomain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpIPv4BaseDomain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpUDPBaseDomain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpTCPDomain.h
-./winstub.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
+./winstub.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./winstub.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
-./winstub.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./winstub.lo: ../../include/net-snmp/library/ucd_compat.h
 ./winstub.lo: ../../include/net-snmp/library/mib.h
 ./winstub.lo: ../../include/net-snmp/mib_api.h
