--- a/testing/Makefile.in
+++ b/testing/Makefile.in
@@ -34,7 +34,7 @@ test:
 	@if test "x$(PERL)" = "x" \
 	         -o "x@PERL_SYSTEM_INVOKES_POSIX_SHELL@" != xyes \
 		 || { ! $(PERL) -e 'require TAP::Harness;' >/dev/null 2>&1 \
-		    && ! $(PERL) -e 'require Test::Harness;' >/dev/null 2>&1; };\
+		    && ! $(PERL) -e 'require Test::Harness; die if $Test::Harness::VERSION < 1.21;' >/dev/null 2>&1; };\
 	then \
 		echo $(srcdir)/RUNTESTS ; \
 		$(srcdir)/RUNTESTS ; \
