--- a/local/mib2c.iterate_access.conf
+++ b/local/mib2c.iterate_access.conf
@@ -290,9 +290,7 @@ ${i}_handler(
                                 if (retval) {
                                     ui = SNMP_MALLOC_STRUCT(undoInfo);
                                     ui->len = retval_len;
-                                    memdup((u_char **) &ui->ptr,
-                                           (u_char *) retval,
-                                           ui->len);
+                                    ui->ptr = netsnmp_memdup(retval, ui->len);
                                 }
 
                     /** check the new value, possibly against the
